--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<%=render partial: "shared/cdn_assets"%>
     <title><%= content_for(:title) || "Helper Methods Part 3" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,14 +24,10 @@
   </head>
 
   <body>
-    <div style="color: green;">
-      <%= notice %>
-    </div>
+  <div>
+  <%= render partial: "shared/navbar"%>
 
-    <div style="color: red;">
-      <%= alert %>
+      <%= yield %>
     </div>
-    
-    <%= yield %>
   </body>
 </html>
