--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,11 @@
 <h1>
   List of all movies
 </h1>
+<%= render partial: "zebra/giraffe"%>
+
+<hr>
+</h1>
+<%= render partial: "zebra/elephant", locals: { person: "Alice" }%>
 
 <hr>
 
