--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -15,13 +15,18 @@
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
+
 <div>
     <%= form.label :image_url %>
     <%= form.text_field :image_url %>
 
 </div>
 
-  <div>
+<div>
+    <%= form.label :released_on %>
+    <%= form.date_select :released_on %>
+
+</div>
     <%= form.submit %>
   </div>
 <% end %>
