--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   <body>
   <div>
   <%= render partial: "shared/navbar"%>
+  <%= render partial: "shared/flash_messages"%>
 
       <%= yield %>
     </div>
